--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="anim-codecyan">
-                            <img class="w-100 img-fluid" src="assets/phone.png" alt="">
+                            <img class="w-100 img-fluid" src="assets/35-removebg-preview.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-3">
